@@ -6,15 +6,6 @@ import java.util.stream.Collectors;
 
 public class CliExceptionUtil
 {
-   public static RuntimeException wrapRunntime(Throwable e)
-   {
-      if(e instanceof RuntimeException)
-      {
-         return (RuntimeException) e;
-      }
-
-      return new RuntimeException(e);
-   }
 
    public static UnsupportedOperationException createUnsupportedOperationException(Method method)
    {
