@@ -12,13 +12,14 @@ Enhancements:
 
 Bug fixes:
 
-Logs and message panel: SQLWarnings, that occur during SQL execution, are now displayed as warning instead of error.
+Columns in completions list are are now sorted.
 
+Logs and message panel: SQLWarnings, that occur during SQL execution, are now displayed as warning instead of error.
 
 #1365 Column order mixed up after "show row numbers" and "make editable" or "rerun"
 
 #1364 Connections tab shows no data on PostgreSQL 9.2+
-Thanks to Krzysztof Szymko for the fix
+  Thanks to Krzysztof Szymko for the fix
 
 
 3.9.0 (11/04/2018)
